2009-09-27  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/sub2ind.cc (get_dimensions): Allow singleton array.
	(Fsub2ind): Allow single index.

2009-09-26  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-m-m.cc (trans_mul, mul_trans): Update.
	* OPERATORS/op-fm-fm.cc (trans_mul, mul_trans): Update.
	* OPERATORS/op-cm-cm.cc (trans_mul, mul_trans, herm_mul, mul_herm): Update.
	* OPERATORS/op-fcm-fcm.cc (trans_mul, mul_trans, herm_mul, mul_herm): Update.
	* OPERATORS/op-m-cm.cc (trans_mul): Update.
	* OPERATORS/op-cm-m.cc (mul_trans): Update.
	* OPERATORS/op-fm-fcm.cc (trans_mul): Update.
	* OPERATORS/op-fcm-fm.cc (mul_trans): Update.

2009-09-23  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-m-cm.cc: Declare and install trans_mul operator.
	* OPERATORS/op-fm-fcm.cc: Ditto.
	* OPERATORS/op-cm-m.cc: Declare and install mul_trans operator.
	* OPERATORS/op-fcm-fm.cc: Ditto.

2009-09-23  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-m-cm.cc: Declare and install trans_ldiv operator.
	* OPERATORS/op-fm-fcm.cc: Ditto.

2009-09-23  Jaroslav Hajek  <highegg@gmail.com>

	* ov.h (octave_value::op_trans_ldiv, op_herm_ldiv): New enum constants.
	* ov.cc (decompose_binary_op, binary_op_fcn_name): Support them.
	* xdiv.h: Include mx-defs.h, delete forward decls.
	* xdiv.cc (xleftdiv): Support transt parameter.
	(xdiv): Optimize.
	* pt-cbinop.cc (simplify_ldiv_op): New static func.
	(maybe_compound_binary_expression): Try it.
	* OPERATORS/op-m-m.cc: Define and install trans_ldiv handler.
	* OPERATORS/op-fm-fm.cc: Ditto.
	* OPERATORS/op-cm-cm.cc: Define and install trans_ldiv and herm_ldiv
	handlers.
	* OPERATORS/op-fcm-fcm.cc: Ditto.

2009-09-19  Jaroslav Hajek  <highegg@gmail.com>

	* ov.h (octave_value_extract): New template function.
	* data.cc (do_linspace): New static template function.
	(Flinspace): Rewrite.

2009-09-18  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fltk_backend.cc (fltk_backend::redraw_figure):